--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
 
                 <!-- link to contact -->
-                <a href="" class="contactLink">Contact me</a>
+                <a href="#contactMe" class="contactLink">Contact me</a>
             </div>
             <div class="socialNav">
                 <ul>
