--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <path
                                     d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
 
-                    <li><a href="https://github.com/dana-66" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
+                    <li><a href="https://www.linkedin.com/in/dana-tarik-36ba65292?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BGKjcpSznQU%2BYQFg09gX6XQ%3D%3D" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
                                 class="icon icon-tabler icon-tabler-brand-linkedin" width="36" height="36"
                                 viewBox="0 0 24 24" stroke-width="1" stroke="#e9fff9c7" fill="none"
                                 stroke-linecap="round" stroke-linejoin="round">
@@ -72,7 +72,7 @@
                                 <path d="M16 4l-4 4l-4 -4" />
                                 <path d="M4 6.5l8 7.5l8 -7.5" />
                             </svg></a></li>
-                    <li><a href="https://drive.google.com/file/d/1rJ6WithgFAbA6fiafxl5JX0ynU1dUxyX/view?usp=drive_link"
+                    <li><a href="https://drive.google.com/file/d/1rJ6WithgFAbA6fiafxl5JX0ynU1dUxyX/view?usp=sharing"
                             download target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
                                 class="icon icon-tabler icon-tabler-file-cv" width="36" height="36" viewBox="0 0 24 24"
                                 stroke-width="1" stroke="#e9fff9c7" fill="none" stroke-linecap="round"
