--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="intro">
                 <p>Hi, My name is </p>
                 <h1>Dana Shatat.</h1>
-                <h2>I build things for the web.</h2>
+                <h2>Frontend Web developer</h2>
 
                 <p class="para">
                     I'm a passionate web developer with a penchant for exploring networks, I'm excited to share my journey and showcase the projects I've worked on.
