--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                     </p>
                 </div>
-                <div class="img"><img src="img/WhatsApp Image 2024-05-21 at 4.56.34 AM.jpeg" alt=""></div>
+                <div class="img"><img src="img/WhatsApp Image 2024-08-24 at 10.35.36 PM.jpeg" alt=""></div>
             </div>
         </div>
     </section>
