--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         </div>
     </section>
     <footer>
-        <p>desined and built by me 2024</p>
+        <p>designed and built by me 2024</p>
     </footer>
 
 </body>
