updated the CV link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <path d="M16 4l-4 4l-4 -4" />
                                 <path d="M4 6.5l8 7.5l8 -7.5" />
                             </svg></a></li>
-                    <li><a href="https://drive.google.com/file/d/1rJ6WithgFAbA6fiafxl5JX0ynU1dUxyX/view?usp=sharing"
+                    <li><a href="https://drive.google.com/file/d/1KRhGj2q3o-NyX6n_XFarn5YeWp5XXwO5/view?usp=drive_link"
                             download target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
                                 class="icon icon-tabler icon-tabler-file-cv" width="36" height="36" viewBox="0 0 24 24"
                                 stroke-width="1" stroke="#e9fff9c7" fill="none" stroke-linecap="round"
